k8s/domains/plans/components/api/infra/overlays/prod-eu/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: plans-api
spec:
  template:
    spec:
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: plans-api
          volumeMounts:
            - name: tmp
              mountPath: /tmp
