k8s/domains/plans/components/api/infra/overlays/prod-eu/plans-api-public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: plans-api-public
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && (PathPrefix(`/v1/plans/docs`) || PathRegexp(`^/v1/accounts/[^/]+/plan$`))
      services:
        - name: plans-api
          port: 3000
  tls:
    certResolver: le
    domains:
      - main: api.tma.com
